# numbax

./: README.md  primitives_progress.md  pyproject.toml
examples/: example_linear_model.py  minimal_example.py
numbax/: __init__.py  _numpize.py  decorators.py  numpize.py  primitives.py  utils.py
scirpts/: generate_primitive_progress.py
