[tool.poetry]
name = "numbax"
version = "0.1.0"
description = ""
authors = ["Amedeo Biolatti <amedeo.biolatti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = ">=0.4.30,<0.5.0"
numba = "^0.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
